--- a/profile.html
+++ b/profile.html
@@ -23,12 +23,12 @@
   <div class="modal-dialog modal-sm" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close" data-dismiss="modal" title="Close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Remove Member?</h4>
       </div>
-      <!--<div class="modal-body">
-        ...
-      </div>-->
+      <div class="modal-body">
+        This will not remove any templates or mailings, but it will remove the member's access to team content.
+      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
         <button type="button" data-dismiss="modal" id="modal-confirm" class="btn btn-cta">Confirm</button>
