--- a/docs.html
+++ b/docs.html
@@ -51,7 +51,8 @@
       <h3>Docs</h3>
       <div class="panel panel-solid">
         <div class="panel-body">
-
+          <h4>Setting Up An Account Team</h4>
+          <p>Write some stuff.</p>
             <!-- / PROFILE -->
             <div class="col-md-12 col-lg-12">
               <hr />
@@ -70,7 +71,7 @@
 <footer class="foot">
   <p class="text-center">
     &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="#">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
+    <a href="cookies.html">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
   </p>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
