--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
   <footer class="foot">
   <p class="text-center">
     &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="#">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
+    <a href="cookies.html">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
   </p>
 </footer>
 
