--- a/template.html
+++ b/template.html
@@ -13,7 +13,8 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
   <link rel="stylesheet" href="lib/theme.css"/>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+
   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
   <script src="lib/genauth.js"></script>
 </head>
@@ -51,13 +52,14 @@
       <h3>Template Editor</h3>
       <div class="panel panel-solid">
         <div class="panel-body">
-          <div class="col-md-12 col-lg-12">
+          <div class="col-md-12 col-lg-12 clearfix">
             <!-- BUTTON BOX -->
-            <h4 id="template-name" contenteditable class="template-name">New Template</h4>
+            <span class="template-name-hov"><h4 id="template-name" contenteditable class="template-name">New Template</h4></span>
+            <a title="Save" class="btn btn-cta pull-right">Save</a>
             <!-- / BUTTON BOX -->
-            <hr />
-          </div>
 
+          </div>
+<hr class="clear" />
           <pre id="editor">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;body&gt;
@@ -82,7 +84,7 @@
 <footer class="foot">
   <p class="text-center">
     &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="#">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
+    <a href="cookies.html">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
   </p>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
