--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
         <div class="dropdown pull-right">
           <span id="dLabel" class="nav" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
           <ul id="dList" class="dropdown-menu">
-            <li><a tabindex="-1" href="profile.html">Account Settings</a></li>
+            <li><a tabindex="-1" href="profile">Account Settings</a></li>
             <li class="divider"></li>
             <li><a tabindex="-1" href="#" id="logout">Logout</a></li>
           </ul>
@@ -39,8 +39,8 @@
           </div>
           <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a href="library.html">Library</a></li>
-              <li><a href="docs.html">Docs</a></li>
+              <li><a href="library">Library</a></li>
+              <li><a href="docs">Docs</a></li>
             </ul>
           </div>
       </div>
@@ -48,7 +48,7 @@
 <div id="container" class="container-fluid">
 <!-- PROFILE -->
   <div class="row">
-    <div id="profile-content" class="col-md-12 col-lg-12">
+    <div id="profile-content" class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
       <h3>Template Editor</h3>
       <div class="panel panel-solid">
         <div class="panel-body">
@@ -84,7 +84,7 @@
 <footer class="foot">
   <p class="text-center">
     &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="cookies.html">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
+    <a href="cookies">Cookie Policy</a> &bull; <a href="privacy">Privacy Policy</a>
   </p>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
