--- a/docs.html
+++ b/docs.html
@@ -14,8 +14,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
   <link rel="stylesheet" href="lib/theme.css"/>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico' rel='stylesheet' type='text/css'>
-  <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-  <script src="lib/genauth.js"></script>
 </head>
 <body>
 
@@ -74,6 +72,18 @@
     <a href="cookies">Cookie Policy</a> &bull; <a href="privacy">Privacy Policy</a>
   </p>
 </footer>
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script>
+// Initialize Firebase
+var config = {
+  apiKey: "AIzaSyDRfKpMBM5TTL4lHVK3jmt-ry8t37AepzE",
+  authDomain: "brilliant-torch-8379.firebaseapp.com",
+  databaseURL: "https://brilliant-torch-8379.firebaseio.com",
+  storageBucket: "brilliant-torch-8379.appspot.com",
+};
+firebase.initializeApp(config);
+</script>
+<script src="lib/genauth.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="lib/profile.js"></script>
