--- a/template.html
+++ b/template.html
@@ -13,13 +13,10 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
   <link rel="stylesheet" href="lib/theme.css"/>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
-
-  <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-  <script src="lib/genauth.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
+  <!-- NAV BAR -->
   <nav class="navbar navbar-static-top">
       <div class="container-fluid">
         <div class="dropdown pull-right">
@@ -45,59 +42,79 @@
           </div>
       </div>
   </nav>
-<div id="container" class="container-fluid">
-<!-- PROFILE -->
-  <div class="row">
-    <div id="profile-content" class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-      <h3>Template Editor</h3>
-      <div class="panel panel-solid">
-        <div class="panel-body">
-          <div class="col-md-12 col-lg-12 clearfix">
-            <!-- BUTTON BOX -->
-            <span class="template-name-hov"><h4 id="template-name" contenteditable class="template-name">New Template</h4></span>
-            <a title="Save" class="btn btn-cta pull-right">Save</a>
-            <!-- / BUTTON BOX -->
+  <!-- / NAV BAR -->
+  <div id="container" class="container-fluid">
+  <!-- PROFILE -->
+    <div class="row">
+      <div id="profile-content" class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+        <h3>Template Editor</h3>
+        <div class="panel panel-solid">
+          <div class="panel-body">
+            <div class="col-md-12 col-lg-12 clearfix">
+              <!-- BUTTON BOX -->
+              <span class="template-name-hov"><h4 id="template-name" contenteditable class="template-name">New Template</h4></span>
+              <a title="Save" class="btn btn-cta pull-right" style="margin-top:-5px;margin-bottom:10px;margin-right:-10px;">Save</a>
+              <!-- / BUTTON BOX -->
 
-          </div>
-<hr class="clear" />
-          <pre id="editor">&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-  &lt;body&gt;
-
-  &lt;/body&gt;
-&lt;/html&gt;</pre>
-            <!-- / PROFILE -->
-            <div class="col-md-12 col-lg-12">
-              <hr />
-              <!-- ALERT BOX -->
-              <div id="alert" class="alert" role="alert">
-
-              </div>
-              <!-- / ALERT BOX -->
             </div>
+  <hr class="clear" />
+            <pre id="editor">&lt;!DOCTYPE html&gt;
+  &lt;html&gt;
+    &lt;head&gt;
+      &lt;title&gt;New Email&lt;/title&gt;
+      &lt;meta charset="utf-8"/&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
 
+    &lt;/body&gt;
+  &lt;/html&gt;</pre>
+              <!-- / PROFILE -->
+              <div class="col-md-12 col-lg-12">
+                <hr />
+                <!-- ALERT BOX -->
+                <div id="alert" class="alert" role="alert">
+
+                </div>
+                <!-- / ALERT BOX -->
+              </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<footer class="foot">
-  <p class="text-center">
-    &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="cookies">Cookie Policy</a> &bull; <a href="privacy">Privacy Policy</a>
-  </p>
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<!--<script src="lib/template.js"></script>-->
-<script src="lib/ace.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/chrome");
-    editor.getSession().setMode("ace/mode/html");
-    editor.getSession().setUseWrapMode(true);
-    editor.setShowPrintMargin(false);
-    editor.getSession().setTabSize(2);
-</script>
+  <!-- FOOTER -->
+  <footer class="foot">
+    <p class="text-center">
+      &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
+      <a href="cookies">Cookie Policy</a> &bull; <a href="privacy">Privacy Policy</a>
+    </p>
+  </footer>
+  <!-- / FOOTER -->
+  <!-- PAGE SCRIPTS -->
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDRfKpMBM5TTL4lHVK3jmt-ry8t37AepzE",
+    authDomain: "brilliant-torch-8379.firebaseapp.com",
+    databaseURL: "https://brilliant-torch-8379.firebaseio.com",
+    storageBucket: "brilliant-torch-8379.appspot.com",
+  };
+  firebase.initializeApp(config);
+  </script>
+  <script src="lib/genauth.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <!--<script src="lib/template.js"></script>-->
+  <script src="lib/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script>
+      var editor = ace.edit("editor");
+      editor.setTheme("ace/theme/chrome");
+      editor.getSession().setMode("ace/mode/html");
+      editor.getSession().setUseWrapMode(true);
+      editor.setShowPrintMargin(false);
+      editor.getSession().setTabSize(2);
+  </script>
+  <!-- / PAGE SCRIPTS -->
 </body>
 </html>
